--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,13 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   geometry_msgs
   tf
+  tf2
+  tf2_bullet 
+  tf2_ros 
+  tf2_geometry_msgs 
+  tf2_kdl 
+  tf2_msgs
+  visualization_msgs
 )
 
 find_package(OpenCV REQUIRED)
